SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Annual_Revenue__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>