SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Assigned_BDR__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Assigned_BDR__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Assigned_BDR__r.FirstName + &quot; &quot; +  LeanData__Reporting_Matched_Account__r.Assigned_BDR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Assigned BDR</label>
    <type>Text</type>
</CustomField>