SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Created_From_ZoomInfo__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Created_From_ZoomInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the lead was enriched by ZoomInfo but did not originally have a LeanData match and therefore an Account was created to match against this lead.</description>
    <label>Account Match Created From ZoomInfo</label>
    <type>Checkbox</type>
</CustomField>