SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Employees__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Employees__c</fullName>
    <formula>IF(ISNULL( LeanData__Reporting_Matched_Account__r.NumberOfEmployees ),0, LeanData__Reporting_Matched_Account__r.NumberOfEmployees)</formula>
    <label>Account Match Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>