SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Engagement_Minutes_3_m_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Engagement_Minutes_3_m_del__c</fullName>
    <formula>00N4100000eTLOw.00N1K00000ed3XN</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Engagement Minutes (3 mos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>