SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Geo__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Geo__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Geo__c</formula>
    <label>Account Match Geo</label>
    <type>Text</type>
</CustomField>