SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_HQ_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_HQ_State__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match HQ State</label>
    <type>Text</type>
</CustomField>