SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Industry__c</fullName>
    <formula>TEXT( LeanData__Reporting_Matched_Account__r.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Industry</label>
    <type>Text</type>
</CustomField>