SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Name__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Name</label>
    <type>Text</type>
</CustomField>