SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Owner_Role__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Owner Role</label>
    <type>Text</type>
</CustomField>