SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Plan__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Plan__c</formula>
    <label>Account Match Plan</label>
    <type>Text</type>
</CustomField>