SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Ranking__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Ranking__c</formula>
    <label>Account Match Ranking</label>
    <type>Text</type>
</CustomField>