SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Rating__c</fullName>
    <formula>TEXT(LeanData__Reporting_Matched_Account__r.Rating)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Rating</label>
    <type>Text</type>
</CustomField>