SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Region__c</fullName>
    <formula>IF(ISNULL(LeanData__Reporting_Matched_Account__r.Region__c), &quot;Matched Account Unavailable&quot; ,LeanData__Reporting_Matched_Account__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Region</label>
    <type>Text</type>
</CustomField>