SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Rollworks_Spike_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Rollworks_Spike_Level__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Rollworks_Spike_Level__c</formula>
    <label>Account Match Rollworks Spike Level</label>
    <type>Text</type>
</CustomField>