SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Target_Account__c</fullName>
    <formula>IF( LeanData__Reporting_Matched_Account__r.Target_Account__c = TRUE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Target Account</label>
    <type>Checkbox</type>
</CustomField>