SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Target_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Target_Account_Tier__c</fullName>
    <formula>TEXT(LeanData__Reporting_Matched_Account__r.Target_Account_Tier_DG__c)</formula>
    <label>Account Match Account Grade</label>
    <type>Text</type>
</CustomField>