SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Technology__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Technology__c</fullName>
    <formula>TEXT(LeanData__Reporting_Matched_Account__r.Technology__c)</formula>
    <label>Account Match Technology</label>
    <type>Text</type>
</CustomField>