SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Territory__c</fullName>
    <formula>TEXT( LeanData__Reporting_Matched_Account__r.Territory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Territory</label>
    <type>Text</type>
</CustomField>