SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Account_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Type__c</fullName>
    <formula>TEXT(LeanData__Reporting_Matched_Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match Type</label>
    <type>Text</type>
</CustomField>