SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/adroll__Click_Conversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__Click_Conversion__c</fullName>
    <formula>adroll__ClickConversion__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Click Conversion (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>