SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/adroll__Clicks__c.field-meta.xml
<CustomField>
    <fullName>adroll__Clicks__c</fullName>
    <description>Number of Clicks for the Email Address</description>
    <inlineHelpText>Number of Clicks for the Email Address</inlineHelpText>
    <label>Lead Clicks (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>