SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/adroll__ImpressionCosts__c.field-meta.xml
<CustomField>
    <fullName>adroll__ImpressionCosts__c</fullName>
    <description>Costs Incurred for the Impressions</description>
    <inlineHelpText>Costs Incurred for the Impressions</inlineHelpText>
    <label>Lead Impression Costs (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>