SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/adroll__Impressions__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impressions__c</fullName>
    <description>Number of Impressions for the user</description>
    <inlineHelpText>Number of Impressions for the user</inlineHelpText>
    <label>Lead Impressions (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>