SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/AdvocateHub__Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referral_ID__c</fullName>
    <label>Referral ID (appexchange)</label>
    <length>36</length>
    <type>Text</type>
</CustomField>