SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Allbound_Manual_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Allbound_Manual_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allbound Manual Checkbox</label>
    <type>Checkbox</type>
</CustomField>