SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Are_you_feature_flagging__c.field-meta.xml
<CustomField>
    <fullName>Are_you_feature_flagging__c</fullName>
    <description>Are you feature flagging at your company?</description>
    <label>Are you feature flagging</label>
    <length>10</length>
    <type>Text</type>
</CustomField>