SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/BDR_Manager__c.field-meta.xml
<CustomField>
    <fullName>BDR_Manager__c</fullName>
    <description>used for holding queue dashboard: https://launchdarkly.lightning.force.com/lightning/r/Dashboard/01Z1K000001I5w1UAC/view?queryScope=userFolders</description>
    <formula>CASE( Account_Match_Assigned_BDR__c ,
&quot;Aaron Ahmad&quot;,&quot;Candice McBee&quot;,
&quot;Jack Batchelor&quot;,&quot;Candice McBee&quot;,
&quot;Greg Beckham&quot;,&quot;Candice McBee&quot;,
&quot;Jessica Berzack&quot;,&quot;Candice McBee&quot;,
&quot;Andrew Charles&quot;,&quot;Candice McBee&quot;,
&quot;Ricky Dinh&quot;,&quot;Candice McBee&quot;,
&quot;Kevin Montano&quot;,&quot;Candice McBee&quot;,
&quot;Sarah Berkin&quot;,&quot;Kevin Liu&quot;,
&quot;Gabriel Cisne&quot;,&quot;Kevin Liu&quot;,
&quot;Ismael Medina&quot;,&quot;Kevin Liu&quot;,
&quot;Fou Phan&quot;,&quot;Kevin Liu&quot;,
&quot;Viet Tran&quot;,&quot;Kevin Liu&quot;,
&quot;Raven Winchester&quot;,&quot;Kevin Liu&quot;,
&quot;Xianyan Zhai&quot;,&quot;Kevin Liu &quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDR Manager</label>
    <type>Text</type>
</CustomField>