SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Behavioral_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Date_Stamp__c</fullName>
    <description>Most recent date a record reached a behavioral score of &gt; 50.</description>
    <inlineHelpText>Most recent date a record reached a behavioral score of &gt; 50.</inlineHelpText>
    <label>Behavioral Date Stamp</label>
    <type>Date</type>
</CustomField>