SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Behavioral_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Score__c</fullName>
    <description>Prospect score based on behavior with marketing efforts.</description>
    <inlineHelpText>Prospect score based on behavior with marketing efforts.</inlineHelpText>
    <label>Behavioral Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>