SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/bizible2__Account__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field lookup from Bizible. This associates the lead to an existing Account.</description>
    <inlineHelpText>Custom field lookup from Bizible. This associates the lead to an existing Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>