SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Bizible_FT_to_LC_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Bizible_FT_to_LC_Velocity__c</fullName>
    <formula>bizible2__Touchpoint_Date_LC__c - bizible2__Touchpoint_Date_FT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bizible FT to LC Velocity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>