SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Calendly_Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Event_Start_Time__c</fullName>
    <label>Calendly Event Start Time</label>
    <type>DateTime</type>
</CustomField>