SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Calendly_Webinar_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Webinar_Name__c</fullName>
    <label>Calendly Webinar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>