SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Can_use_SaaS_product_AWS__c.field-meta.xml
<CustomField>
    <fullName>Can_use_SaaS_product_AWS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can the company/team use a SaaS product (on AWS)?</description>
    <label>Can use SaaS product (AWS)?</label>
    <type>Checkbox</type>
</CustomField>