SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Can_we_solve_their_pain__c.field-meta.xml
<CustomField>
    <fullName>Can_we_solve_their_pain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do they have a pain we can solve?? (Yes / No)</description>
    <inlineHelpText>Do they have a pain we can solve?? (Yes / No)</inlineHelpText>
    <label>Do they have a pain we can solve?</label>
    <type>Checkbox</type>
</CustomField>