SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/cbit__Clearbit__c.field-meta.xml
<CustomField>
    <fullName>cbit__Clearbit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clearbit</label>
    <referenceTo>cbit__Clearbit__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>