SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/cbit__ClearbitReady__c.field-meta.xml
<CustomField>
    <fullName>cbit__ClearbitReady__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clearbit Ready</label>
    <type>Checkbox</type>
</CustomField>