SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/cbit__Facebook__c.field-meta.xml
<CustomField>
    <fullName>cbit__Facebook__c</fullName>
    <formula>IF(  LEN(cbit__Clearbit__r.cbit__FacebookHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://facebook.com/&quot; &amp; cbit__Clearbit__r.cbit__FacebookHandle__c, &quot;facebook.com/&quot; &amp; cbit__Clearbit__r.cbit__FacebookHandle__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook</label>
    <type>Text</type>
</CustomField>