SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/cbit__LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>cbit__LinkedIn__c</fullName>
    <formula>IF(  LEN(cbit__Clearbit__r.cbit__LinkedinHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://linkedin.com/&quot; &amp; cbit__Clearbit__r.cbit__LinkedinHandle__c, &quot;linkedin.com/&quot; &amp; cbit__Clearbit__r.cbit__LinkedinHandle__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>