SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Contact_method__c.field-meta.xml
<CustomField>
    <fullName>Contact_method__c</fullName>
    <description>This is how the customer made first contact with us....in addition to the lead source.</description>
    <label>Contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_method</valueSetName>
    </valueSet>
</CustomField>