SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>&quot;Qualifying&quot;</formula>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>