SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Count_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>