SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <inlineHelpText>The Role of the user who created this Lead.</inlineHelpText>
    <label>Created By Role</label>
    <type>Text</type>
</CustomField>