SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Current_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Customer_Date__c</fullName>
    <label>Current Customer Date</label>
    <type>Date</type>
</CustomField>