SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Status__c</fullName>
    <label>Current Sequence Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>