SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Number__c</fullName>
    <label>Current Sequence Step Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>