SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Type__c</fullName>
    <label>Current Sequence Step Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>