SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Current_Sequence_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_User_Name__c</fullName>
    <label>Current Sequence User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>