SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Date_Assigned_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned_to_Owner__c</fullName>
    <label>Date Assigned to Owner</label>
    <type>DateTime</type>
</CustomField>