SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Date_Completed_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_Sequence__c</fullName>
    <description>Date/Time stamp of when lead last completed a sequence.</description>
    <label>Date of Completed Sequence</label>
    <type>DateTime</type>
</CustomField>