SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Days_Since_Last_Route__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Route__c</fullName>
    <formula>NOW () -  LeanData_Last_Route_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Route</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>