SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Demographic_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Date_Stamp__c</fullName>
    <description>Most recent date a record reached a demographic score of &gt; 30.</description>
    <inlineHelpText>Most recent date a record reached a demographic score of &gt; 30.</inlineHelpText>
    <label>Demographic Date Stamp</label>
    <type>Date</type>
</CustomField>