SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <description>Prospect score based on the demographics of the lead.</description>
    <inlineHelpText>Prospect score based on the demographics of the lead.</inlineHelpText>
    <label>Demographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>