SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Open text area in demo form</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>