SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Disqualification_Note__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Note__c</fullName>
    <description>Detail on why the Lead was disqualified. If duplicate, leave blank.</description>
    <inlineHelpText>Detail on why the Lead was disqualified. If duplicate, leave blank.</inlineHelpText>
    <label>Disqualification Note</label>
    <type>TextArea</type>
</CustomField>