SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Disqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Date__c</fullName>
    <label>Disqualified Date</label>
    <type>Date</type>
</CustomField>