SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Disqualify__c.field-meta.xml
<CustomField>
    <fullName>Disqualify__c</fullName>
    <description>Reasons why the Lead is not qualified. If not a duplicate, please explain why.</description>
    <inlineHelpText>Reasons why the Lead is not qualified. If not a duplicate, please explain why.</inlineHelpText>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>Disqualify_Reasons</valueSetName>
    </valueSet>
</CustomField>