SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Do_they_FF_today__c.field-meta.xml
<CustomField>
    <fullName>Do_they_FF_today__c</fullName>
    <label>Do they FF today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>