SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>This formula pulls the domain from the Lead&apos;s email address, unless the provider is a personal email (e.g., gmail).</description>
    <formula>CASE( SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL), 
&apos;yahoo.com&apos;, NULL, &apos;gmail.com&apos;, NULL, &apos;hotmail.com&apos;, NULL, &apos;aol.com&apos;, NULL, &apos;outlook.com&apos;, NULL, 
SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL) )</formula>
    <inlineHelpText>This formula pulls the domain from the Lead&apos;s email address, unless the provider is a personal email (e.g., gmail).</inlineHelpText>
    <label>Domain</label>
    <type>Text</type>
</CustomField>