SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Email_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Email_Clicked__c</fullName>
    <inlineHelpText>Tracking Pardot emails</inlineHelpText>
    <label>Email Clicked</label>
    <length>100</length>
    <type>Text</type>
</CustomField>