SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Executive_Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Executive_Assistant_Email__c</fullName>
    <label>Executive Assistant Email</label>
    <type>Email</type>
</CustomField>