SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Finished_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Finished_Sequence__c</fullName>
    <description>Marked when lead is done with Outreach sequence</description>
    <label>Finished Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>