SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/First_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (First Campaign)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>