SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/First_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Date__c</fullName>
    <label>1st Meeting Date</label>
    <type>Date</type>
</CustomField>