SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Form_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Form_Most_Recent__c</fullName>
    <label>Form Most Recent</label>
    <type>TextArea</type>
</CustomField>