SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/FT_Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>FT_Lead_Category__c</fullName>
    <label>FT Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FT_Lead_Category</valueSetName>
    </valueSet>
</CustomField>