SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Hot_Lead_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead_Date_Stamp__c</fullName>
    <description>Leads that score changes quickly in the day.</description>
    <label>Hot Lead Date Stamp</label>
    <type>Date</type>
</CustomField>