SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/How_do_they_FF__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_FF__c</fullName>
    <description>How/do they FF today? Please provide additional detail</description>
    <inlineHelpText>How/do they FF today? Please provide additional detail</inlineHelpText>
    <label>How do they FF?</label>
    <type>TextArea</type>
</CustomField>