SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/How_often_do_they_release__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_they_release__c</fullName>
    <description>Do they release quarterly?</description>
    <inlineHelpText>Do they release quarterly?</inlineHelpText>
    <label>Do they release quarterly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>