SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/How_often_to_do_you_release__c.field-meta.xml
<CustomField>
    <fullName>How_often_to_do_you_release__c</fullName>
    <label>How often to do they release?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>